# axal-zk-verifier

./: .gitignore  .gitmodules  README.md  package-lock.json  package.json
circuits/: price_discrepancy.circom
circuits/circom/: price_discrepancy.circom
circuits/sp1Code/: Cargo.toml
circuits/sp1Code/uniswap/client/: Cargo.toml
circuits/sp1Code/uniswap/client/src/: main.rs
circuits/sp1Code/uniswap/host/: Cargo.toml
circuits/sp1Code/uniswap/host/src/: main.rs
contracts/: README.md  foundry.toml
contracts/broadcast/PriceDiscrepancy.s.sol/11155111/: run-1741450437.json  run-1741479720.json  run-1741486410.json  run-latest.json
contracts/broadcast/PriceDiscrepancy.s.sol/84532/: run-1741794311.json  run-latest.json
contracts/script/: PriceDiscrepancy.s.sol
contracts/src/: PlonkVerifier.sol  PriceDiscrepancy.sol  PriceDiscrepancyDeployer.sol  PriceDiscrepancyProxy.sol
src/app/: config.ts  layout.tsx  page.tsx
src/app/api/generate_proof/: route.ts
src/components/: ConnectWalletButton.tsx
src/lib/: executeTransaction.ts  generateProof.ts
src/lib/abi/: PriceDiscrepancy.json  PriceDiscrepancyV1.json
src/shared/: addresses.ts
src/styles/: globals.css
